--- a/Data_Analysis/Data_Analysis.ipynb
+++ b/Data_Analysis/Data_Analysis.ipynb
@@ -171,144 +171,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 49,
-   "metadata": {},
-   "outputs": [
-    {
-     "ename": "ValueError",
-     "evalue": "array-scalars are immutable",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[0;31mValueError\u001b[0m                                Traceback (most recent call last)",
-      "Input \u001b[0;32mIn [49]\u001b[0m, in \u001b[0;36m<cell line: 1>\u001b[0;34m()\u001b[0m\n\u001b[0;32m----> 1\u001b[0m \u001b[43mSig_Results\u001b[49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mloc\u001b[49m\u001b[43m[\u001b[49m\u001b[43mpathway\u001b[49m\u001b[43m]\u001b[49m\u001b[43m[\u001b[49m\u001b[38;5;124;43m'\u001b[39;49m\u001b[38;5;124;43mpval\u001b[39;49m\u001b[38;5;124;43m'\u001b[39;49m\u001b[43m]\u001b[49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mitemset\u001b[49m\u001b[43m(\u001b[49m\u001b[43m)\u001b[49m\n",
-      "\u001b[0;31mValueError\u001b[0m: array-scalars are immutable"
-     ]
-    }
-   ],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 27,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/html": [
-       "<div>\n",
-       "<style scoped>\n",
-       "    .dataframe tbody tr th:only-of-type {\n",
-       "        vertical-align: middle;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe tbody tr th {\n",
-       "        vertical-align: top;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe thead th {\n",
-       "        text-align: right;\n",
-       "    }\n",
-       "</style>\n",
-       "<table border=\"1\" class=\"dataframe\">\n",
-       "  <thead>\n",
-       "    <tr style=\"text-align: right;\">\n",
-       "      <th></th>\n",
-       "      <th>metadata</th>\n",
-       "      <th>value</th>\n",
-       "      <th>coef</th>\n",
-       "      <th>stderr</th>\n",
-       "      <th>N</th>\n",
-       "      <th>N.not.0</th>\n",
-       "      <th>pval</th>\n",
-       "      <th>qval</th>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>feature</th>\n",
-       "      <th></th>\n",
-       "      <th></th>\n",
-       "      <th></th>\n",
-       "      <th></th>\n",
-       "      <th></th>\n",
-       "      <th></th>\n",
-       "      <th></th>\n",
-       "      <th></th>\n",
-       "    </tr>\n",
-       "  </thead>\n",
-       "  <tbody>\n",
-       "    <tr>\n",
-       "      <th>PWY-2941: L-lysine biosynthesis II|g__Lactobacillus.s__Lactobacillus_reuteri</th>\n",
-       "      <td>DSS_only</td>\n",
-       "      <td>TRUE</td>\n",
-       "      <td>-0.318167</td>\n",
-       "      <td>0.011826</td>\n",
-       "      <td>12</td>\n",
-       "      <td>3</td>\n",
-       "      <td>2.512774e-08</td>\n",
-       "      <td>0.000104</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>PWY-2941: L-lysine biosynthesis II|g__Lactobacillus.s__Lactobacillus_reuteri</th>\n",
-       "      <td>RCEwDSS_only</td>\n",
-       "      <td>TRUE</td>\n",
-       "      <td>-0.318167</td>\n",
-       "      <td>0.016725</td>\n",
-       "      <td>12</td>\n",
-       "      <td>3</td>\n",
-       "      <td>2.759777e-07</td>\n",
-       "      <td>0.000456</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>PWY-2941: L-lysine biosynthesis II|g__Lactobacillus.s__Lactobacillus_reuteri</th>\n",
-       "      <td>RCE_only</td>\n",
-       "      <td>TRUE</td>\n",
-       "      <td>-0.318167</td>\n",
-       "      <td>0.021320</td>\n",
-       "      <td>12</td>\n",
-       "      <td>3</td>\n",
-       "      <td>1.455199e-06</td>\n",
-       "      <td>0.001092</td>\n",
-       "    </tr>\n",
-       "  </tbody>\n",
-       "</table>\n",
-       "</div>"
-      ],
-      "text/plain": [
-       "                                                        metadata value  \\\n",
-       "feature                                                                  \n",
-       "PWY-2941: L-lysine biosynthesis II|g__Lactobaci...      DSS_only  TRUE   \n",
-       "PWY-2941: L-lysine biosynthesis II|g__Lactobaci...  RCEwDSS_only  TRUE   \n",
-       "PWY-2941: L-lysine biosynthesis II|g__Lactobaci...      RCE_only  TRUE   \n",
-       "\n",
-       "                                                        coef    stderr   N  \\\n",
-       "feature                                                                      \n",
-       "PWY-2941: L-lysine biosynthesis II|g__Lactobaci... -0.318167  0.011826  12   \n",
-       "PWY-2941: L-lysine biosynthesis II|g__Lactobaci... -0.318167  0.016725  12   \n",
-       "PWY-2941: L-lysine biosynthesis II|g__Lactobaci... -0.318167  0.021320  12   \n",
-       "\n",
-       "                                                    N.not.0          pval  \\\n",
-       "feature                                                                     \n",
-       "PWY-2941: L-lysine biosynthesis II|g__Lactobaci...        3  2.512774e-08   \n",
-       "PWY-2941: L-lysine biosynthesis II|g__Lactobaci...        3  2.759777e-07   \n",
-       "PWY-2941: L-lysine biosynthesis II|g__Lactobaci...        3  1.455199e-06   \n",
-       "\n",
-       "                                                        qval  \n",
-       "feature                                                       \n",
-       "PWY-2941: L-lysine biosynthesis II|g__Lactobaci...  0.000104  \n",
-       "PWY-2941: L-lysine biosynthesis II|g__Lactobaci...  0.000456  \n",
-       "PWY-2941: L-lysine biosynthesis II|g__Lactobaci...  0.001092  "
-      ]
-     },
-     "execution_count": 27,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 53,
+   "execution_count": 56,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -347,14 +210,14 @@
     "        y=temp_df[(temp_df[\"Pooled\"]==True)][\"Abundance\"],\n",
     "        name=\"Pooled\",\n",
     "        marker=dict(\n",
-    "            color='darkgray',\n",
+    "            color='#7f7f7f',\n",
     "            opacity=0.7,\n",
     "            size=12,\n",
     "            line=dict(\n",
     "                color='black',\n",
     "                width=1\n",
     "            )),\n",
-    "        marker_symbol=\"square\"))\n",
+    "        marker_symbol=\"cross\"))\n",
     "\n",
     "\n",
     "    fig.update_layout(\n",
