--- a/Data_Analysis/Data_Analysis.ipynb
+++ b/Data_Analysis/Data_Analysis.ipynb
@@ -29,11 +29,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 32,
    "metadata": {},
    "outputs": [],
    "source": [
     "Path_abund=pd.read_csv(\"Merged_Pathabundance_Table_CPM_meta.tsv\",delimiter='\\t')\n",
+    "\n",
     "Mapping_dict={}\n",
     "for i in range(Path_abund.shape[0]):\n",
     "    Mapping_dict['X'+str(i)]=Path_abund.iloc[i,0]\n",
@@ -45,7 +46,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 33,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "Path_abund.columns=Path_abund.columns.str.replace(\"RCE\",\"RCJ\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 34,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -56,7 +66,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 35,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -67,7 +77,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 36,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -76,7 +86,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 37,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -85,7 +95,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 38,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -94,7 +104,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 39,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -104,7 +114,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 40,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -113,7 +123,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 41,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -124,38 +134,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 46,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "['Control',\n",
-       " 'Control',\n",
-       " 'Control',\n",
-       " 'DSS',\n",
-       " 'DSS',\n",
-       " 'DSS',\n",
-       " 'Control',\n",
-       " 'DSS',\n",
-       " 'RCE',\n",
-       " 'RCE_plus_DSS',\n",
-       " 'RCE',\n",
-       " 'RCE',\n",
-       " 'RCE',\n",
-       " 'RCE_plus_DSS',\n",
-       " 'RCE_plus_DSS',\n",
-       " 'RCE_plus_DSS']"
-      ]
-     },
-     "execution_count": 11,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
-    "Samples=list(Path_Abund_Unstratified_Filtered.columns[:-1])\n",
-    "Group_Names=[\"Control\",\"RCE\",\"DSS\",\"RCE_plus_DSS\"]\n",
+    "Samples=list(Path_Abund_Unstratified_Filtered.columns[1:-1])\n",
+    "Group_Names=[\"Control\",\"DSS\",\"RCJ\",\"RCJ_plus_DSS\"]\n",
     "Group_List=[]\n",
     "for i in Samples:\n",
     "    for j in Group_Names:\n",
@@ -163,23 +147,30 @@
     "            Group_List.append(j)\n",
     "            break\n",
     "        elif \"plus\" in i:\n",
-    "            Group_List.append(\"RCE_plus_DSS\")\n",
+    "            Group_List.append(\"RCJ_plus_DSS\")\n",
     "            break\n",
     "\n",
-    "Group_List"
+    "group_map={Samples[i]:Group_List[i] for i in range(len(Samples))}"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 56,
+   "execution_count": 81,
    "metadata": {},
    "outputs": [],
    "source": [
-    "sns.set_theme()\n",
+    "pallete=['rgb(150,150,150)','rgb(77,175,74)','rgb(55,126,184)','rgb(152,78,163)']\n",
+    "pallete_out=['rgb(150,150,150)','rgb(77,175,74)','rgb(55,126,184)','rgb(152,78,163)']"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 82,
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "if not os.path.exists('Sig_Plots_Pathways_Unstratified/'):\n",
     "    os.mkdir('Sig_Plots_Pathways_Unstratified/')\n",
-    "pallete=px.colors.qualitative.Plotly\n",
-    "pallete_out=px.colors.qualitative.D3\n",
     "for pathway in Path_Abund_Unstratified_Filtered[\"Sample_ID\"]:\n",
     "    fig = go.Figure()\n",
     "    temp_df={\"Name\":[],\"Group\":[],\"Abundance\":[],\"Pooled\":[]}\n",
@@ -190,14 +181,14 @@
     "        temp_df[\"Pooled\"].append(True if \"D_\" in column else False)\n",
     "    temp_df=pd.DataFrame(temp_df)\n",
     "    \n",
-    "    for index,group in enumerate([\"Control\",\"RCE\",\"DSS\",\"RCE_plus_DSS\"]):\n",
+    "    for index,group in enumerate([\"Control\",\"DSS\",\"RCJ\",\"RCJ_plus_DSS\"]):\n",
     "        fig.add_trace(go.Box(\n",
     "            y=temp_df[temp_df[\"Group\"]==group][\"Abundance\"],\n",
     "            name=group,\n",
     "            boxpoints='all',\n",
     "            jitter=0,\n",
-    "#             fillcolor=pallete[index],\n",
-    "#             marker_color=pallete_out[index],\n",
+    "            marker_color=pallete[index],\n",
+    "            line_color=pallete[index],\n",
     "            whiskerwidth=0.2,\n",
     "            marker_size=10,\n",
     "            line_width=1,\n",
